[signin] OAuthMultilogin maintains current account ordering

OAuth multilogin now tries to keep the current account ordering as
much as possible.
It also handles the cases where there are more than 10 accounts in
Chrome (which happens in real life), and where there are more than
10 accounts in the cookie (should not happen in real life, but
should be handled gracefully).

Bug: 899472
Change-Id: I04b6ab195beb2691ce23f25e1a645b19b0e2c9d9
Reviewed-on: https://chromium-review.googlesource.com/c/1335598
Commit-Queue: David Roger <droger@chromium.org>
Reviewed-by: Mihai Sardarescu <msarda@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608723}
Former-commit-id: 90db8cbd9d930955df0e6097a621ddaaea826685