components/signin/core/browser/dice_account_reconcilor_delegate.h
@@ -39,7 +39,7 @@ class DiceAccountReconcilorDelegate : public AccountReconcilorDelegate {
   bool ShouldRevokeTokensOnCookieDeleted() override;
 
  private:
-  std::vector<std::string> ReorderChromeAccountsForReconcile(
+  std::vector<std::string> GetChromeAccountsForReconcile(
       const std::vector<std::string>& chrome_accounts,
       const std::string& primary_account,
       const std::vector<gaia::ListedAccount>& gaia_accounts,
